v4/index.css
/* index.css Revision 4 */

/* Color palette: https://coolors.co/272d2d-70a288-dab785-d5896f-ff4f79 */
/* V2: https://coolors.co/131616-272d2d-4c685b-70a288-a5ad87-c0b286-dab785-d8a07a-d5896f-ff4f79 */
html{
	background-color: black;
	background-size: cover;
	/*background-image: url("web.svg");*/
	background-size: 100% 100%; 
	background-attachment: fixed;
}
body{
/*	background: #131616; */
	
	color: #DEE3E3;
	margin-top: 0px;
	width: 100%;
	min-width: 0px;
  	margin: auto;
}
a {
	font-size: 120%;
}
.content{
	text-align: center;
}



.sitemap{
	background: rgba(39,45,45,1);
/*	background: linear-gradient(0deg, #1b2020 0%, #1b2020 75.555%, rgba(39,45,45,1) 76%); */
	padding-bottom: 0;
}
.out{
	background: #1b2020;
/*	background: linear-gradient(0deg, #161a1a 0%, #161a1a 61.555%, #1b2020 62%); */
	padding-bottom: 0;
	
}
.contact{
	background: #161a1a;
/*	background: linear-gradient(0deg, #060a0a 0%, #060a0a 81.555%, #161a1a 82%);
	padding-bottom: 1em;*/
}

.otherstuff{
	background: black;
/*	background: linear-gradient(0deg, black 0%, black 81.555%, #060a0a 82%); */
	padding-bottom: 1em;
}/*
.body{
	margin-top: auto;
	/*backdrop-filter: blur(5px);
	background: rgba(255,255,255,.04);*//*
	background: #1b2020;
	padding-bottom: 0em;
}*/

/* Sanity */
.linksContainer{
	margin-top: 0;
	padding-top: 1em;
	padding-bottom: 1em;
	background: #1b2020;
}
.Links {
	padding-top: 1em;
	padding-bottom: 1em;
	background: #161a1a;
}
.contactContainer {
	background: #0e1111;
	padding-top: 1em;
	padding-bottom: 1em;
}
/* End of Sanity */

.logoGroup{
	background: #272d2d;
	margin-top: auto;
	padding-bottom: 0;
}
.footer{
	background: #272d2d;
	background: linear-gradient(0deg, black 0%, #0e1111 100%);
	margin-top: auto;
	padding-top: 1em;
	padding-bottom: 2em;
}
.rataLogo{
	margin-bottom: 0px;
	margin-top: 0px;
	padding-left: .5em;
	padding-right: .5em;
}
.rataLogo-dark{
	font-family: Montserrat Medium;
	letter-spacing: .1em;
	font-size: 300%;
	color: #DEE3E3; 
}

.rataLogo-light{
	font-family: Montserrat Medium;
	letter-spacing: .1em;
	font-size: 350%;
	color: #272d2d;
}

.rataLogo-small{
	font-size: 75%;
}
.rataLogo-small-small{
	top: 0px;
	font-size: 33%;
	color: #cad2d2;
}

.rataLogo-small-small-container{
	margin-top: -.66em;
}

.rataLogo-sub{
	margin-top: 0px;
	margin-bottom: 0px;
	font-size: 200%;
	color: #424C4C;
}

.title-hr {
	margin-bottom: 0px;
}

.title-hr .hrh {
    width: calc(15%);
    display: inline-block;
    margin: 5px 10px;
    border-top: 1px solid #e5e5e5;
}
.hrh {
	display: none !important;
	margin-left: 0px !important;
	margin-right:0px !important;
}
.hrhl{/*
	margin-left: 0px !important;
	margin-right:33% !important;
   	text-align: left;*/
}
.hrhr {
	
}
.break{
/*	background: black; */
	padding-left: .6em;
	padding-right: .6em;
	padding-top: .3em;
}
.first{
	margin-top: 0px;
	padding-top: .5em;
}
.hr {
	margin-top: 0px;
	margin-bottom: 0px;
}
.hrs {
	display: none !important;
	color: #424C4C;
}
.icon {
	height: 1.5em;
}
.icon2 {
	width: 1.5em;
}

.collapsable {
    overflow: hidden;
    max-height: 12em;
    transition: max-height 0.25s linear;
}

.collapsed {
    max-height: 2em;
}

/* Links */
/* unvisited link */
a:link {
  color: white;
}

/* visited link */
a:visited {
  color: green;
}

/* mouse over link */
a:hover {
  color: #70A288;
}

/* selected link */
a:active {
  color: #4C685B;
} 

/* /Links */

